--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <title>Untitled Document</title>
 </head>
 <body>
-
-        <h1>數位思維</h1>
-
+    <div class="container">
+        <header>
+            <h1 class="logo"><a href="#">數位思維整合行銷有限公司</a></h1>
+            <div class="d-flex"></div>
+            <ul class="nav">
+                <li><a href="#">服務項目</a></li>
+                <li><a href="#">經營客戶</a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#">經營理念</a></li>
+            </ul>
+        </header>
+    </div>
 </body>
 </html>
