--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Untitled Document</title>
+    <title>數位思維整合行銷有限公司</title>
+    <!-- 連結css -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1 class="logo"><a href="#">數位思維整合行銷有限公司</a></h1>
-            <div class="d-flex"></div>
-            <ul class="nav">
-                <li><a href="#">服務項目</a></li>
-                <li><a href="#">經營客戶</a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#">經營理念</a></li>
-            </ul>
+            <div class="header-content wrapper-content">
+                <h1 class="logo">DTMC</h1>
+                <nav class="header-nav">
+                    <a href="#" class="link__text">服務項目</a>
+                    <a href="#" class="link__text">合作對象</a>
+                    <a href="#" class="link__text">關於團隊</a>
+                    <a href="#" class="link__text">聯絡我們</a>
+                </nav>
+            </div>
         </header>
     </div>
 </body>
