--- a/index.html
+++ b/index.html
@@ -13,13 +13,27 @@
             <div class="header-content wrapper-content">
                 <h1 class="logo">DTMC</h1>
                 <nav class="header-nav">
-                    <a href="#" class="link__text">服務項目</a>
-                    <a href="#" class="link__text">合作對象</a>
-                    <a href="#" class="link__text">關於團隊</a>
-                    <a href="#" class="link__text">聯絡我們</a>
+                    <a href="#" class="link-text">服務項目</a>
+                    <a href="#" class="link-text">合作對象</a>
+                    <a href="#" class="link-text">關於團隊</a>
+                    <a href="#" class="link-text">聯絡我們</a>
                 </nav>
             </div>
         </header>
     </div>
+    <main>
+        <section class="section-primary">
+            <div class="primary-content wrapper-content">
+                <div class="wrapper-primary-text">
+                    <!-- 左欄的內容 -->
+                    <h2 class="primary__title section__title">Hi,there<br><span>we are</span><br>DATA THiNK</h2>
+            <p class="primary__text">提供整合型行銷服務，高度的自製率以及靈活思維是我們的特色和優勢</p>
+            <a href="" class="primary__link-button link-button">View Works</a>
+                </div>
+                <img class="primary__main-img" src="assets/headerimg.png" alt="">
+            </div>
+        </section>
+    </main>
+    
 </body>
 </html>
